<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/Container.DarkBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/toolbar"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:columnCount="2"
        android:paddingBottom="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_small"
        android:rowCount="4">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="left|center"
            android:text="@string/sum_text"
            android:textSize="@dimen/text_size_big"/>


        <EditText
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:hint="@string/sum_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_text"
            android:textSize="@dimen/text_size_big"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:hint="@string/about_hint"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/category_text"
            android:textSize="@dimen/text_size_big"/>

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="fill"-->
        <!--android:hint="@string/category_hint"-->
        <!--android:textColorHint="@color/green"-->
        <!--android:textSize="@dimen/text_size_medium"/>-->
        <Spinner
            android:id="@+id/spinner_category_list"
            android:layout_width="@dimen/width_spinner_category_list"
            android:layout_height="match_parent"
            android:background="@color/background_spinner"
            android:padding="@dimen/padding_small"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_date"
            android:textSize="@dimen/text_size_big"/>

        <Button
            android:id="@+id/date_time_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_date"
            android:textColor="@color/green"/>

        <Button
            android:id="@+id/add_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/add"/>

    </GridLayout>

</LinearLayout>