<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/Container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        style="@style/cardView"
        card_view:cardBackgroundColor="@color/background"
        card_view:cardCornerRadius="@dimen/card_view_corner_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/transaction_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"/>

                <TextView
                    android:id="@+id/transaction_date"
                    style="@style/DateStyle"
                    android:text="@string/date"/>
            </LinearLayout>

            <TextView
                android:id="@+id/transaction_sum"
                style="@style/TextMain"
                android:text="@string/sum"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
